Fix problem with overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,7 +74,7 @@
     }
 
     body {
-        @apply bg-background min-h-screen text-foreground;
+        @apply bg-background min-h-screen overflow-x-hidden text-foreground;
     }
 }
 
